--- a/about.html
+++ b/about.html
@@ -46,12 +46,12 @@
                             <li>
                                 <a href="/">HOME</a>
                             </li>
-                            <li class="dropdown-products">
-                                <a href="#">
+                            <li class="dropdown">
+                                <a href="#" data-bs-toggle="dropdown" aria-expanded="false">
                                     PRODUCTS
                                 </a>
-                                <ul class="dropdown-menu-products">
-                                    <li class="border-bottom">
+                                <ul class="dropdown-menu  dropdown-menu-products">
+                                    <li class="menu_border">
                                         <a href="/collections/">AUTOMOTIVE</a>
                                     </li>
                                     <li>
@@ -96,13 +96,13 @@
                                     <li class="m-2">
                                         <a href="/">HOME</a>
                                     </li>
-                                    <li class="dropdown-products-res">
-                                        <li class="dropdown-products">
-                                            <a href="#" class="ms-2">
+                                  
+                                        <li class="dropdown ms-2">
+                                            <a href="#" data-bs-toggle="dropdown" aria-expanded="false">
                                                 PRODUCTS
                                             </a>
-                                            <ul class="dropdown-menu-products">
-                                                <li class="border-bottom">
+                                            <ul class="dropdown-menu  dropdown-menu-products bar_menu">
+                                                <li class="menu_border">
                                                     <a href="/collections/">AUTOMOTIVE</a>
                                                 </li>
                                                 <li>
