--- a/collections/index.html
+++ b/collections/index.html
@@ -46,12 +46,12 @@
                             <li>
                                 <a href="/">HOME</a>
                             </li>
-                            <li class="dropdown-products">
-                                <a href="#">
+                            <li class="dropdown">
+                                <a href="#" data-bs-toggle="dropdown" aria-expanded="false">
                                     PRODUCTS
                                 </a>
-                                <ul class="dropdown-menu-products">
-                                    <li class="border-bottom">
+                                <ul class="dropdown-menu  dropdown-menu-products">
+                                    <li class="menu_border">
                                         <a href="/collections/">AUTOMOTIVE</a>
                                     </li>
                                     <li>
@@ -59,7 +59,6 @@
                                     </li>
                                 </ul>
                             </li>
-
                             <li>
                                 <a href="/about.html">ABOUT US </a>
                             </li>
@@ -95,27 +94,19 @@
                                     <li class="m-2">
                                         <a href="/">HOME</a>
                                     </li>
-                                    <li class="dropdown-products-res ms-2">
-                                
-                                        <div class="accordion" id="accordionExample">
-                                            <button
-                                                class="accordion d-flex Fueling-text justify-content-between col-12">
-                                                <span> PRODUCTS</span>
-                                            </button>
-                                            <div class="panel1">
-                                                <div class="accordion-body p-0">
-                                                    <ul class="dropdown-menu-products-res">
-                                                    <li>
-                                                        <a href="/collections/">AUTOMOTIVE</a>
-                                                    </li>
-                                                    <li>
-                                                        <a href="/industrial/">INDUDTRIAL</a>
-                                                     </li>
-                                                </ul>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </li>
+                                    <li class="dropdown ms-2">
+                                        <a href="#" class="text-success" data-bs-toggle="dropdown" aria-expanded="false">
+                                            PRODUCTS
+                                        </a>
+                                        <ul class="dropdown-menu  dropdown-menu-products bar_menu">
+                                            <li class="menu_border">
+                                                <a href="/collections/">AUTOMOTIVE</a>
+                                            </li>
+                                            <li>
+                                                <a href="/industrial/">INDUDTRIAL</a>
+                                            </li>
+                                        </ul>
+                                    </li>
                                     <li class="m-2">
                                         <a href="/about.html">ABOUT US </a>
                                     </li>
@@ -434,7 +425,7 @@
                         <a href="${url}">
                             <div class="products-img">
                                 <img src="${img}"
-                                    alt="images" class="img-fluid col-12 product_img">
+                                    alt="images" class="img-fluid col-12 product_img mt-set">
                             </div>
                             <div class="products-title">
                                 <div class="d-flex justify-content-between">
