--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                                 <a href="#" data-bs-toggle="dropdown" aria-expanded="false">
                                     PRODUCTS
                                 </a>
-                                <ul class="dropdown-menu  dropdown-menu-products">
+                                <ul class="dropdown-menu p-0 dropdown-menu-products">
                                     <li class="menu_border">
                                         <a href="/collections/">AUTOMOTIVE</a>
                                     </li>
@@ -106,9 +106,9 @@
                                         <a href="#" data-bs-toggle="dropdown" aria-expanded="false">
                                             PRODUCTS
                                         </a>
-                                        <ul class="dropdown-menu  dropdown-menu-products bar_menu">
-                                            <li class="menu_border">
-                                                <a href="/collections/">AUTOMOTIVE</a>
+                                        <ul class="dropdown-menu p-0 dropdown-menu-products bar_menu">
+                                            <li>
+                                                <a  href="/collections/">AUTOMOTIVE</a>
                                             </li>
                                             <li>
                                                 <a href="/industrial/">INDUDTRIAL</a>
