--- a/career.html
+++ b/career.html
@@ -501,7 +501,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-    <script src="https://ik.imagekit.io/ecomax/assets/JS/script.js"></script>
+
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
         $(window).scroll(function () {
@@ -555,6 +555,7 @@
             });
         });
     </script>
+        <!-- <script src="https://ik.imagekit.io/ecomax/assets/JS/script.js"></script> -->
     <!-- Script end -->
 </body>
 
