--- a/career.html
+++ b/career.html
@@ -555,7 +555,7 @@
             });
         });
     </script>
-        <!-- <script src="https://ik.imagekit.io/ecomax/assets/JS/script.js"></script> -->
+        <script src="https://ik.imagekit.io/ecomax/assets/JS/script.js"></script>
     <!-- Script end -->
 </body>
 
