--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                                 <a href="#" data-bs-toggle="dropdown" aria-expanded="false">
                                     PRODUCTS
                                 </a>
-                                <ul class="dropdown-menu p-0 dropdown-menu-products">
+                                <ul class="dropdown-menu  dropdown-menu-products">
                                     <li class="menu_border">
                                         <a href="/collections/">AUTOMOTIVE</a>
                                     </li>
@@ -106,7 +106,7 @@
                                         <a href="#" data-bs-toggle="dropdown" aria-expanded="false">
                                             PRODUCTS
                                         </a>
-                                        <ul class="dropdown-menu p-0 dropdown-menu-products bar_menu">
+                                        <ul class="dropdown-menu dropdown-menu-products bar_menu">
                                             <li>
                                                 <a  href="/collections/">AUTOMOTIVE</a>
                                             </li>
@@ -152,13 +152,10 @@
                                 class="carousel-item active hero-images hero-xs-image hero-sm-image hero-md-image hero-lg-image hero-xl-image">
                                 <img src="https://ik.imagekit.io/ecomax/assets/images/home/hero.webp"
                                     class="d-none d-lg-block img-fluid col-12" alt="images" loading="lazy" />
-
                                 <img src="assets/images/home/responsive_hero.png" class="d-md-none img-fluid col-12"
                                     alt="images" loading="lazy" />
-
                                 <img src="assets/images/home/hero_responsive.png"
                                     class="d-none d-md-block d-lg-none img-fluid col-12" alt="images" loading="lazy" />
-
                             </div>
                             <div
                                 class="carousel-item hero-xs-image hero-sm-image hero-md-image hero-lg-image hero-xl-image">
