--- a/products/index.html
+++ b/products/index.html
@@ -140,7 +140,7 @@
             <div class="row p-0">
                 <div class="col-12 d-flex flex-wrap details p-0">
                     <div class="product-images">
-                        <div class="swiper product_swiper2">
+                        <div class="swiper new_products2">
                             <div class="swiper-wrapper mt-0 m-0 text-white" id="data-images">
                              
                             </div>
@@ -155,8 +155,8 @@
                                 </div>
                             </div>
                           </div>
-                          <div class="swiper product_swiper" >
-                            <div class=" swiper-wrapper product_img mb-0 product-sab-images text-white imag-mini" id="data-images_mini" >
+                          <div class="swiper new_products" >
+                            <div class=" swiper-wrapper  mb-0 product-sab-images text-white imag-mini" id="data-images_mini" >
                              
                             </div>
                           </div>
@@ -790,15 +790,15 @@
 
     <script src="https://ik.imagekit.io/ecomax/assets/JS/init.js?time=1" defer></script>
 
- <script>
-    var swiper = new Swiper(".product_swiper", {
-      spaceBetween: 10,
-      slidesPerView: 4,
+<script>
+    var swiper = new Swiper(".new_products", {
+      spaceBetween: 20,
+      slidesPerView: 3,
       freeMode: true,
       watchSlidesVisibility: true,
       watchSlidesProgress: true,
     });
-    var swiper2 = new Swiper(".product_swiper2", {
+    var swiper2 = new Swiper(".new_products2", {
       spaceBetween: 10,
       navigation: {
         nextEl: ".swiper-button-next",
