new_products images

--- a/products/index.html
+++ b/products/index.html
@@ -288,7 +288,7 @@
 
                             <div class="swiper-slide d-flex m-0">
                                 <div class="products">
-                                    <a href="https://ecomaxlubricant.com/products/index?s=max-4t-20W-40&c=two-wheeler-engine-oil">
+                                    <a href="#">
                                         <div class="products-img">
                                             <img src="https://ik.imagekit.io/ecomax/assets/images/collections/two-wheeler-engine-oil/products/max-4t-20w-40.png"
                                                 alt="Max 4T 20W-40" class="img-fluid col-12" >
@@ -308,7 +308,7 @@
                             </div>
                             <div class="swiper-slide  d-flex m-0">
                                 <div class="products">
-                                    <a href="https://ecomaxlubricant.com/products/index?s=action-20w-40-4t&c=two-wheeler-engine-oil">
+                                    <a href="#">
                                         <div class="products-img">
                                             <img src="https://ik.imagekit.io/ecomax/assets/images/collections/two-wheeler-engine-oil/products/action-20w-404t.png"
                                                 alt="Max 4T 20W-40" class="img-fluid col-12">
@@ -328,7 +328,7 @@
                             </div>
                             <div class="swiper-slide  d-flex m-0">
                                 <div class="products">
-                                    <a href="https://ecomaxlubricant.com/products/index?s=4t-power-plus-20w-40&c=two-wheeler-engine-oil">
+                                    <a href="#">
                                         <div class="products-img">
                                             <img src="https://ik.imagekit.io/ecomax/assets/images/collections/two-wheeler-engine-oil/products/4t-power-plus-20w-40.png"
                                                 alt="Max 4T 20W-40" class="img-fluid col-12">
@@ -349,7 +349,7 @@
 
                             <div class="swiper-slide  d-flex m-0">
                                 <div class="products">
-                                    <a href="https://ecomaxlubricant.com/products/index?s=gold-4t-20w-40&c=two-wheeler-engine-oil">
+                                    <a href="#">
                                         <div class="products-img">
                                             <img src="https://ik.imagekit.io/ecomax/assets/images/collections/two-wheeler-engine-oil/products/gold-4t-20w-40.png"
                                                 alt="Max 4T 20W-40" class="img-fluid col-12">
@@ -369,7 +369,7 @@
                             </div>
                             <div class="swiper-slide  d-flex m-0">
                                 <div class="products">
-                                    <a href="https://ecomaxlubricant.com/products/index?s=max-4t-20w-50&c=two-wheeler-engine-oil">
+                                    <a href="#">
                                         <div class="products-img">
                                             <img src="https://ik.imagekit.io/ecomax/assets/images/collections/two-wheeler-engine-oil/products/max-4t-20w-50.png"
                                                 alt="Max 4T 20W-40" class="img-fluid col-12">
@@ -389,7 +389,7 @@
                             </div>
                             <div class="swiper-slide  d-flex m-0">
                                 <div class="products">
-                                    <a href="https://ecomaxlubricant.com/products/index?s=max-4t-10w-30&c=two-wheeler-engine-oil">
+                                    <a href="#">
                                         <div class="products-img">
                                             <img src="https://ik.imagekit.io/ecomax/assets/images/collections/two-wheeler-engine-oil/products/max-4t10w-30.png"
                                                 alt="Max 4T 20W-40" class="img-fluid col-12">
