--- a/industrial/index.html
+++ b/industrial/index.html
@@ -349,7 +349,6 @@
                                             <p class="text-light footer-add">Block No. E-37, Hindva Dreams,<br> Dhoran
                                                 Pardi Gaypagla Road,<br> Kamrej, Surat, Gujarat-394155</p>
                                         </div>
-
                                     </li>
                                 </ul>
                             </div>
@@ -456,7 +455,7 @@ document.addEventListener("DOMContentLoaded", async () => {
             document.getElementById("industrial_products").innerHTML = collectionData.map((collection) => {
                 return `
                     <div class="col-12 coll-md-6 produt produt_gap coll-lg-4">
-                       <div class="products box-swodo">
+                       <div class="products product_border box-swodo">
                         <a href="/industrial/products/index.html?s=${collection.collection_slug}">
                             <div class="products-img">
                                 <img src="https://ik.imagekit.io/ecomax/assets/images/collections/industrial/${collection.collection_slug}/${collection.collection_image}" alt="images" class="img-fluid col-12 set-mt product_img">
