--- a/collections/index.html
+++ b/collections/index.html
@@ -191,7 +191,7 @@
                         
                     </div>
                     <div class="col-md-12 p-0 col-lg-8 ">
-                        <div class="row text-wrap">
+                        <div class="row text-wrap justify-content-end   ">
                             <div class="col-12 d-none d-md-block col-sm-3 col-md-4 col-xl-3  p-0 float-left mb-3 ">
                                 <h2 class="mb-4 footer_heading">Quick Link</h2>
                                 <ul class="list-group footer-hover">
