--- a/industrial/products/index.html
+++ b/industrial/products/index.html
@@ -251,7 +251,7 @@
     <!-- Footer start -->
     <footer>
         <div class="footer_inner">
-            <div class="page_width ">
+            <div class="page_width justify-content-end">
                 <div class="row p-0">
                     <div class="col-lg-4 col-md-12 mb-4 mb-sm-5  text-light">
                         <a href="/"><img src="https://ik.imagekit.io/ecomax/assets/images/home/ELogo.png" alt="logo image"
@@ -279,7 +279,7 @@
                         
                     </div>
                     <div class="col-md-12 p-0 col-lg-8 ">
-                        <div class="row text-wrap">
+                        <div class="row text-wrap justify-content-end">
                             <div class="col-12 d-none d-md-block col-sm-3 col-md-4 col-xl-3  p-0 float-left mb-3 ">
                                 <h2 class="mb-4 footer_heading">Quick Link</h2>
                                 <ul class="list-group footer-hover">
