--- a/index.html
+++ b/index.html
@@ -716,7 +716,7 @@
 
                     </div>
                     <div class="col-md-12 p-0 col-lg-8 ">
-                        <div class="row text-wrap footer-set">
+                        <div class="row text-wrap footer-set justify-content-end">
                             <div class="col-12 d-none d-md-block col-sm-3 col-md-4 col-xl-3 p-0 float-left mb-3">
                                 <h4 class="mb-4 footer_heading">Quick Link</h4>
                                 <ul class="list-group footer-hover">
