--- a/about.html
+++ b/about.html
@@ -133,7 +133,7 @@
     <div class="about-section">
         <div class="container-fluid p-0 ">
             <div class="heading_container text-center mb-0 mb-md-5  ">
-                <h1 class="main-heading">
+                <h1 class="main-heading about-text ">
                     Welcome to Ecomax – Where Every Drop Counts!
                 </h1>
             </div>
@@ -426,7 +426,7 @@
                                     Aditya Technologies is an chemical Engineer from
                                     L D <br class="d-none d-lg-block"> College of Engineering , Ahemedabad.
                                 </p>
-                                <p class="d-none d-lg-block">
+                                <p class="d-none d-lg-block ">
                                     With excellent exposure to lubricant world as Area In charge in Omega Specialty
                                     Lubricant
                                     nd Area <br class="d-none d-lg-block"> Manager in Klueber India (German
@@ -436,7 +436,7 @@
                                     challenges in industry and Automotive and <br class="d-none d-lg-block"> Brand
                                     development.
                                 </p>
-                                <p class="d-none d-lg-block">
+                                <p class="d-none d-lg-block ">
                                     Great leadership quality & burning desire to get success,
                                     drive him to get into business with brand name <br class="d-none d-lg-block">“
                                     Ecomax ”
@@ -447,7 +447,7 @@
                         </div>
 
                     </div>
-                    <div class="Kalsaria-text d-lg-none">
+                    <div class="Kalsaria-text Kalsaria-text1 d-lg-none">
                         <p>
                             With excellent exposure to lubricant world as Area In charge in Omega Specialty Lubricant
                             nd Area <br class="d-none d-lg-block"> Manager in Klueber India (German Multinational ) for
@@ -456,7 +456,7 @@
                             to deal with tribological
                             challenges in industry and Automotive and <br class="d-none d-lg-block"> Brand development.
                         </p>
-                        <p>
+                        <p >
                             Great leadership quality & burning desire to get success,
                             drive him to get into business with brand name <br class="d-none d-lg-block">“ Ecomax ”
                         </p>
@@ -469,8 +469,9 @@
 
     <!-- MR. Mukesh Kalsaria end -->
     <!-- contact section start -->
-    <section class="section_padding">
-        <div class="page_width ">
+    <section class="section_padding ">
+     
+        <div class="container1">
             <div class="heading_container text-center">
                 <h2 class="main-heading">
                     Connect With Us
