--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -389,7 +388,7 @@
                             business in a transparent, trustworthy
                             and safe manner through team work,
                             integrity and innovation.</p>
-                        <div class="sparkle-button">
+                        <div class="sparkle-button all_btn_set-res d-flex">
                             <div class="sparkle-button">
                                 <a href="javascript:">
                                     <button class="btn3 Read_more_btn d-flex align-items-center">
@@ -427,7 +426,7 @@
                         </div>
                         <div class="swiper-wrapper d-flex col-12">
                             <!-- Individual Slides -->
-                            <div class="swiper-slide   d-flex justify-content-center col-sm-6  col-lg-3">
+                            <div class="swiper-slide d-flex justify-content-center col-sm-6  col-lg-3">
                                 <div class="card Revitalize-card ">
                                     <div class="card1 col-12 justify-content-center d-flex">
                                         <img src="https://ik.imagekit.io/ecomax/assets/images/home/Revitalize1.webp"
@@ -515,7 +514,7 @@
                     </div>
                 </div>
 
-                <div class="sparkle-button product_btn All_product product_btn_bak d-flex justify-content-center">
+                <div class="sparkle-button view_all_btn product_btn All_product product_btn_bak d-flex justify-content-center">
                     <div class="sparkle-button btn-facility">
                         <a href="/collections/">
                             <button class=" btn3 Read_more_btn d-flex align-items-center">
@@ -586,11 +585,7 @@
                                         <div id="collapseTwo" class="accordion-collapse collapse"
                                             aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                                             <div class="accordion-body">
-                                                <p class="Vision_text">To develop and manufacture
-                                                    specialty lubricant that provide
-                                                    value of money along with
-                                                    exceptional services support
-                                                    meeting customers' expectations</p>
+                                                <p class="Vision_text">Empowering Engines Worldwide with Premium Quality Lubricants, Enhancing Efficiency and Reliability on Every Road.</p>
                                             </div>
                                         </div>
                                     </div>
@@ -1141,7 +1136,7 @@
             });
         });
     </script>
-    <script src="https://ik.imagekit.io/ecomax/assets/JS/script.js"></script>
+    <script src="/assets/JS/script.js"></script>
 </body>
 
 </html>
