--- a/products/index.html
+++ b/products/index.html
@@ -298,7 +298,7 @@
     <section class="section-padding pt-0" >
         <div class="container1">
             <div class="row">
-                <div class="product_btn product_btn_bak d-flex justify-content-center" id="Back_btn_Product">
+                <div class="product_btn product_btn_bak  d-flex justify-content-center automotive_bak_btn" id="Back_btn_Product">
                     
                 </div>
             </div>
@@ -636,7 +636,7 @@
                         document.getElementById('data-images').innerHTML = new_images;
 
                         let mini_images = newProducts.map((image) => {
-                            return  "<div class="+"swiper-slide product_mini"+"><img src="+" /assets/images/new_products/"+ image +" class=" +"img-fluid "+" alt="+"images"+"/> </div>" 
+                            return  "<div class="+"swiper-slide  product_mini "+"><img src="+" /assets/images/new_products/"+ image +" class=" +"  img-fluid "+" alt="+"images"+"/> </div>" 
                         })
                         document.getElementById('data-images_mini').innerHTML = mini_images;
 
