--- a/industrial/products/index.html
+++ b/industrial/products/index.html
@@ -234,7 +234,7 @@
 
                     </div>
                 </div>
-                <div class="product_btn product_btn_bak justify-content-center d-flex">
+                <div class="product_btn indudtrial_all_btn product_btn_bak justify-content-center d-flex">
                     <a href="/industrial/">
                         <div class="btn_back d-flex align-items-center">
                             <span class="about-btn d-flex back_btn align-items-center justify-content-center">
