--- a/index.html
+++ b/index.html
@@ -157,15 +157,23 @@
                                     class="d-none d-md-block d-lg-none img-fluid col-12" alt="images" loading="lazy" />
                             </div>
                             <div
-                                class="carousel-item hero-xs-image hero-sm-image hero-md-image hero-lg-image hero-xl-image">
-                                <img src="https://ik.imagekit.io/ecomax/assets/images/home/e7cceeee0a2578c2064ff176b7f146bc.webp"
-                                    class="d-block img-fluid col-12" alt="images" loading="lazy" />
-                            </div>
-                            <div
-                                class="carousel-item hero-xs-image hero-sm-image hero-md-image hero-lg-image hero-xl-image">
-                                <img src="https://ik.imagekit.io/ecomax/assets/images/home/10b4287b734f6cb1ed66729e06a32418.webp"
-                                    class="d-block img-fluid col-12" alt="images" loading="lazy" />
-                            </div>
+                            class="carousel-item active hero-images hero-xs-image hero-sm-image hero-md-image hero-lg-image hero-xl-image">
+                            <img src="assets/images/home/e7cceeee0a2578c2064ff176b7f146bc.webp"
+                                class="d-none d-lg-block img-fluid col-12" alt="images" loading="lazy" />
+                            <img src="assets/images/home/Mobile-Hero2.png" class="d-md-none img-fluid col-12"
+                                alt="images" loading="lazy" />
+                            <img src="assets/images/home/Tab-Hero2.png"
+                                class="d-none d-md-block d-lg-none img-fluid col-12" alt="images" loading="lazy" />
+                        </div>
+                        <div
+                        class="carousel-item active hero-images hero-xs-image hero-sm-image hero-md-image hero-lg-image hero-xl-image">
+                        <img src="assets/images/home/10b4287b734f6cb1ed66729e06a32418.webp"
+                            class="d-none d-lg-block img-fluid col-12" alt="images" loading="lazy" />
+                        <img src="assets/images/home/Mobile-Hero3.png" class="d-md-none img-fluid col-12"
+                            alt="images" loading="lazy" />
+                        <img src="assets/images/home/Tab-Hero3.png"
+                            class="d-none d-md-block d-lg-none img-fluid col-12" alt="images" loading="lazy" />
+                    </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
                             data-bs-slide="prev">
