--- a/contactus.html
+++ b/contactus.html
@@ -209,29 +209,29 @@
           </div>
           
           <form class="form_container_in contactus_form needs-validation " enctype="multipart/form-data" id="detaform" novalidate>
-            <div class="row justify-content-between form_field_container flex-column flex-sm-row">
-              <div class="col-6 ps-0 padding-right-11">
+            <div class="row form_field_container flex-column flex-sm-row">
+              <div class="col">
                   <input type="text" name="first_name" id="validationCustom01"   placeholder="First Name*"
                       class="form-control first_name field AllFormdata" aria-label="First name" required />
               </div>
-              <div class="col-6 pe-0 padding-left-11">
+              <div class="col">
                   <input type="text" name="last_name" id="customer_last_name" placeholder="Last Name*"
                       class="form-control field" aria-label="Last name" required />
                
               </div>
           </div>
-          <div class="row justify-content-between form_field_container flex-column flex-sm-row">
-              <div class="col-6 padding-right-11 ps-0">
+          <div class="row form_field_container flex-column flex-sm-row">
+              <div class="col">
                   <input type="email" name="email" id="customer_email" placeholder="Email*" required
                       class="field form-control" />
               </div>
-              <div class="col-6 pe-0 padding-left-11">
+              <div class="col">
                   <input type="number" name="phone" id="customer_number" placeholder="Phone Number*"
                       required class="field form-control" />
               </div>
           </div>
           <div class="row form_field_container flex-column flex-sm-row">
-              <div class="col-12 p-0">
+              <div class="col">
                   <textarea placeholder="Your Message" id="message" name="message"
                       class="form-control w-100 field message_field" ></textarea>
               </div>
