--- a/career.html
+++ b/career.html
@@ -143,22 +143,22 @@
                 <div class="col-12 pe-0 form_container order-1 order-sm-0 col-sm-7 ">
                     <form class="mt-4 form_container_in needs-validation" enctype="multipart/form-data" id="careerForm" novalidate>
                         <div class="row form_field_container flex-column flex-sm-row">
-                            <div class="col h-set">
+                            <div class="col h-set padding-end">
                                 <input type="text" name="first_name" id="validationCustom01"   placeholder="First Name*"
                                     class="form-control first_name field" aria-label="First name"  required />
                             </div>
-                            <div class="col h-set">
+                            <div class="col h-set padding-st ">
                                 <input type="email" name="email" id="customer_email" placeholder="Your Email*" 
                                     class="field form-control" required />
                                
                             </div>
                         </div>
                         <div class="row form_field_container flex-column flex-sm-row">
-                            <div class="col h-set">
+                            <div class="col h-set padding-end">
                                 <input type="number" name="phone" id="customer_number" placeholder="Phone Number*"
                                      class="field form-control" required />
                             </div>
-                            <div class="col h-set">
+                            <div class="col h-set  padding-st">
                                 <input type="text" name="last_name" id="customer_last_name" placeholder="Applying for which role"
                                     class="form-control field" aria-label="Last name" required  />
                               
@@ -201,7 +201,7 @@
                 <div
                     class="col-12 image_container order-sm-1 order-0 col-sm-5 ps-sm-2 ps-0 ps-lg-5  d-flex justify-content-center justify-content-sm-start ">
                     <div class="career-img-container">
-                        <img src="https://ik.imagekit.io/ecomax/assets/images/career/Mask_group.png" alt="oil-img"
+                        <img src="assets/images/career/Career.png" alt="oil-img"
                             class="img-fluid">
                     </div>
                 </div>
