--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
         content="Ecomax is a leading manufacturer and supplier of high-quality lubricants and oils, dedicated to providing superior products." />
     <title>Ecomax</title>
     <!-- bootstrap -->
-  
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!-- swiper -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <!-- Poppins Font -->
@@ -253,31 +252,26 @@
             <div class="row">
                 <div class="col-12 align-items-center flex-wrap d-flex">
                     <div class="col-12 col-xl-6 d-flex flex-column benefit-text ">
-                        <div class="About-text d-flex">
+                        <div class="d-flex">
                             <div class="bordericon1 d-flex justify-content-center align-items-center ">
                                 <img src="https://ik.imagekit.io/ecomax/assets/images/home/Rectangle_581.webp"
                                     alt="images" />
                             </div>
-                            <div class="text-white text-us">
-                                <p class="d-md-none text-white mb-0 ">About us</p>
-                                <p class="d-none d-md-block text-white mb-0">Ecomax Product Features</p>
-                            </div>
+                            <p class=" text-white mb-0">Ecomax Product Features</p>
                         </div>
                         <div class="About-title mt-1">
                             <h2 class="m-0">The Feature Of Ecomax Engine <br
-                                    class="d-none d-md-block d-lg-none d-xl-block"> Oil That You Will Benefit From</h2>
+                                 class="d-none d-md-block d-lg-none d-xl-block"> Oil That You Will Benefit From</h2>
                         </div>
                         <div class="sparkle-button">
                             <div class="sparkle-button">
-                                <a href="collections/">
-                                    <button class="btn3 d-flex  align-items-center">
-                                        <span
-                                            class="about-btn about-btn-2 d-flex align-items-center justify-content-center">
-                                            <i class="fa-solid fa-arrow-up-long"></i>
-                                        </span>
-                                        <span class="text">View Our Products</span>
-                                    </button>
-                                </a>
+                                <button class="btn3 d-flex  align-items-center">
+                                    <span
+                                        class="about-btn about-btn-2 d-flex align-items-center justify-content-center">
+                                        <i class="fa-solid fa-arrow-up-long"></i>
+                                    </span>
+                                    <span class="text">View Our Products</span>
+                                </button>
                             </div>
                         </div>
                     </div>
@@ -288,7 +282,7 @@
                                     <div class="benefit-main">
                                         <div class="benefit-pro">
                                             <div class="icon2 text-center">
-                                                <img src="https://ik.imagekit.io/ecomax/assets/images/home/star.webp"
+                                                <img src="https://ik.imagekit.io/ecomax/assets/images/home/star.png"
                                                     alt="images">
                                             </div>
                                             <div class="icon-text">
@@ -299,26 +293,28 @@
                                 </div>
                                 <div class="swiper-slide d-flex justify-content-center">
                                     <div class="benefit-main">
+
                                         <div class="benefit-pro">
                                             <div class="icon2 text-center">
-                                                <img src="https://ik.imagekit.io/ecomax/assets/images/home/Vector.webp"
+                                                <img src="https://ik.imagekit.io/ecomax/assets/images/home/Vector.png"
                                                     alt="images">
                                             </div>
                                             <div class="icon-text">
-                                                <h3 class="text-center m-0"> Customer <br>satisfaction</h3>
+                                                <h3 class="text-center m-0"> customer satisfaction</h3>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="swiper-slide d-flex justify-content-center">
                                     <div class="benefit-main">
+
                                         <div class="benefit-pro ">
-                                            <div class=" icon5 text-center">
-                                                <img src="https://ik.imagekit.io/ecomax/assets/images/home/MicrosoftTeams-image(7).webp"
-                                                    alt="images" />
+                                            <div class="icon5 text-center">
+                                                <img src="https://ik.imagekit.io/ecomax/assets/images/home/MicrosoftTeams-image(7).png"
+                                                    alt="images">
                                             </div>
-                                            <div class="icon-text icon-text1">
-                                                <h3 class="text-center m-0"> Engine <br> protection</h3>
+                                            <div class="icon-text mt-0">
+                                                <h3 class="text-center  m-0 ps-2 pe-2"> Engine protection</h3>
                                             </div>
                                         </div>
                                     </div>
@@ -333,8 +329,8 @@
                             <div class="benefit-main">
                                 <div class="benefit-pro">
                                     <div class="icon2 text-center">
-                                        <img src="https://ik.imagekit.io/ecomax/assets/images/home/star.webp"
-                                            alt="images" />
+                                        <img src="https://ik.imagekit.io/ecomax/assets/images/home/star.png"
+                                            alt="images">
                                     </div>
                                     <div class="icon-text">
                                         <h3 class="text-center  m-0"> High Quality Product</h3>
@@ -342,24 +338,26 @@
                                 </div>
                             </div>
                             <div class="benefit-main">
+
                                 <div class="benefit-pro">
                                     <div class="icon2 text-center">
-                                        <img src="https://ik.imagekit.io/ecomax/assets/images/home/Vector.webp"
-                                            alt="images" />
+                                        <img src="https://ik.imagekit.io/ecomax/assets/images/home/Vector.png"
+                                            alt="images">
                                     </div>
                                     <div class="icon-text">
-                                        <h3 class="text-center m-0"> Customer <br> satisfaction</h3>
+                                        <h3 class="text-center m-0"> customer satisfaction</h3>
                                     </div>
                                 </div>
                             </div>
                             <div class="benefit-main">
+
                                 <div class="benefit-pro ">
-                                    <div class=" icon5 text-center">
-                                        <img src="https://ik.imagekit.io/ecomax/assets/images/home/MicrosoftTeams-image(7).webp"
-                                            alt="images" />
+                                    <div class="icon5 text-center">
+                                        <img src="https://ik.imagekit.io/ecomax/assets/images/home/MicrosoftTeams-image(7).png"
+                                            alt="images">
                                     </div>
-                                    <div class="icon-text icon-text1">
-                                        <h3 class="text-center m-0"> Engine <br> protection</h3>
+                                    <div class="icon-text mt-0 ">
+                                        <h3 class="text-center  m-0 ps-2 pe-2"> Engine protection</h3>
                                     </div>
                                 </div>
                             </div>
@@ -1144,7 +1142,7 @@
             });
         });
     </script>
-    <script src="/assets/JS/script.js"></script>
+    <script src="https://ik.imagekit.io/ecomax/assets/JS/script.js"></script>
 </body>
 
 </html>
