--- a/about.html
+++ b/about.html
@@ -257,7 +257,7 @@
 
                                         <div class="benefit-pro ">
                                             <div class="icon5 text-center">
-                                                <img src="https://ik.imagekit.io/ecomax/assets/images/home/MicrosoftTeams-image(7).png"
+                                                <img src="assets/images/home/MicrosoftTeams-image(7).webp"
                                                     alt="images">
                                             </div>
                                             <div class="icon-text mt-0">
@@ -300,7 +300,7 @@
 
                                 <div class="benefit-pro ">
                                     <div class="icon5 text-center">
-                                        <img src="https://ik.imagekit.io/ecomax/assets/images/home/MicrosoftTeams-image(7).png"
+                                        <img src="assets/images/home/MicrosoftTeams-image(7).webp"
                                             alt="images">
                                     </div>
                                     <div class="icon-text mt-0 ">
