--- a/about.html
+++ b/about.html
@@ -223,8 +223,8 @@
                         </div>
                     </div>
                     <div class="col-12 col-md-6 d-sm-none">
-                        <div class="swiper mySwiper5">
-                            <div class="swiper-wrapper ">
+                        <div class="swiper mySwiper">
+                            <div class="swiper-wrapper">
                                 <div class="swiper-slide d-flex justify-content-center ">
                                     <div class="benefit-main">
                                         <div class="benefit-pro">
@@ -267,9 +267,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <br>
                             <div class="swiper-pagination"></div>
-                        </div>
+                          </div>
                     </div>
                     <div class="col-12  benefit-slaider-icon col-xl-6 d-none d-sm-block">
                         <div class="col-12 d-flex benefit-icon">
@@ -774,6 +773,13 @@
                 $(".scrollbar").removeClass("show_scroll_btn");
             }
         });
+        var swiper = new Swiper(".mySwiperabout", {
+      pagination: {
+        el: ".swiper-pagination",
+      },
+    });
+
+    </script>
     </script>
     
     <script src="https://ik.imagekit.io/ecomax/assets/JS/init.js?time=1" defer></script>
