--- a/index.html
+++ b/index.html
@@ -276,8 +276,8 @@
                         </div>
                     </div>
                     <div class="col-12 col-md-6 d-sm-none">
-                        <div class="swiper mySwiper5">
-                            <div class="swiper-wrapper ">
+                        <div class="swiper mySwiper">
+                            <div class="swiper-wrapper">
                                 <div class="swiper-slide d-flex justify-content-center ">
                                     <div class="benefit-main">
                                         <div class="benefit-pro">
@@ -320,9 +320,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <br>
                             <div class="swiper-pagination"></div>
-                        </div>
+                          </div>
                     </div>
                     <div class="col-12  benefit-slaider-icon col-xl-6 d-none d-sm-block">
                         <div class="col-12 d-flex benefit-icon">
@@ -1142,6 +1141,13 @@
                 });
             });
         });
+
+    var swiper = new Swiper(".mySwiperabout", {
+      pagination: {
+        el: ".swiper-pagination",
+      },
+    });
+
     </script>
 
      
