--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                         </div>
                     </div>
                     <div class="col-12 col-md-6 d-sm-none">
-                        <div class="swiper mySwiper">
+                        <div class="swiper mySwiperabout">
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide d-flex justify-content-center ">
                                     <div class="benefit-main">
