--- a/about.html
+++ b/about.html
@@ -168,7 +168,7 @@
                 </div>
                 <div class="col-12   pe-0 col-xl-6">
                     <div class="about-image-container h-100 p-1">
-                        <img class="img-fluid" src="assets/images/about_page/car.png" alt="about image">
+                        <img class="img-fluid" src="https://ik.imagekit.io/ecomax/assets/images/about_page/car.png" alt="about image">
                     </div>
                 </div>
             </div>
@@ -269,7 +269,7 @@
                             </div>
                             <br>
                             <br>
-                            
+
                             <div class="swiper-pagination"></div>
                           </div>
                     </div>
