--- a/career.html
+++ b/career.html
@@ -201,7 +201,7 @@
                 <div
                     class="col-12 image_container order-sm-1 order-0 col-sm-5 ps-sm-2 ps-0 ps-lg-5  d-flex justify-content-center justify-content-sm-start ">
                     <div class="career-img-container">
-                        <img src="assets/images/career/Career.png" alt="oil-img"
+                        <img src="https://ik.imagekit.io/ecomax/assets/images/career/Career.png" alt="oil-img"
                             class="img-fluid">
                     </div>
                 </div>
