--- a/index.html
+++ b/index.html
@@ -150,27 +150,27 @@
                                 class="carousel-item active hero-images hero-xs-image hero-sm-image hero-md-image hero-lg-image hero-xl-image">
                                 <img src="https://ik.imagekit.io/ecomax/assets/images/home/hero.webp"
                                     class="d-none d-lg-block img-fluid col-12" alt="images" loading="lazy" />
-                                <img src="assets/images/home/responsive_hero.png" class="d-md-none img-fluid col-12"
+                                <img src="https://ik.imagekit.io/ecomax/assets/images/home/responsive_hero.png" class="d-md-none img-fluid col-12"
                                     alt="images" loading="lazy" />
-                                <img src="assets/images/home/hero_responsive.png"
+                                <img src="https://ik.imagekit.io/ecomax/assets/images/home/hero_responsive.png"
                                     class="d-none d-md-block d-lg-none img-fluid col-12" alt="images" loading="lazy" />
                             </div>
                             <div
                             class="carousel-item  hero-images hero-xs-image hero-sm-image hero-md-image hero-lg-image hero-xl-image">
-                            <img src="assets/images/home/e7cceeee0a2578c2064ff176b7f146bc.webp"
+                            <img src="https://ik.imagekit.io/ecomax/assets/images/home/e7cceeee0a2578c2064ff176b7f146bc.webp"
                                 class="d-none d-lg-block img-fluid col-12" alt="images" loading="lazy" />
                             <img src="assets/images/home/Mobile-Hero2.png" class="d-md-none img-fluid col-12"
                                 alt="images" loading="lazy" />
-                            <img src="assets/images/home/Tab-Hero2.png"
+                            <img src="https://ik.imagekit.io/ecomax/assets/images/home/Tab-Hero2.png"
                                 class="d-none d-md-block d-lg-none img-fluid col-12" alt="images" loading="lazy" />
                         </div>
                         <div
                         class="carousel-item  hero-images hero-xs-image hero-sm-image hero-md-image hero-lg-image hero-xl-image">
-                        <img src="assets/images/home/10b4287b734f6cb1ed66729e06a32418.webp"
+                        <img src="https://ik.imagekit.io/ecomax/assets/images/home/10b4287b734f6cb1ed66729e06a32418.webp"
                             class="d-none d-lg-block img-fluid col-12" alt="images" loading="lazy" />
-                        <img src="assets/images/home/Mobile-Hero3.png" class="d-md-none img-fluid col-12"
+                        <img src="https://ik.imagekit.io/ecomax/assets/images/home/Mobile-Hero3.png" class="d-md-none img-fluid col-12"
                             alt="images" loading="lazy" />
-                        <img src="assets/images/home/Tab-Hero3.png"
+                        <img src="https://ik.imagekit.io/ecomax/assets/images/home/Tab-Hero3.png"
                             class="d-none d-md-block d-lg-none img-fluid col-12" alt="images" loading="lazy" />
                     </div>
                         </div>
@@ -310,7 +310,7 @@
 
                                         <div class="benefit-pro ">
                                             <div class="icon5 text-center">
-                                                <img src="assets/images/home/MicrosoftTeams-image(7).webp"
+                                                <img src="https://ik.imagekit.io/ecomax/assets/images/home/MicrosoftTeams-image(7).webp"
                                                     alt="images">
                                             </div>
                                             <div class="icon-text mt-0">
@@ -354,7 +354,7 @@
 
                                 <div class="benefit-pro ">
                                     <div class="icon5 text-center">
-                                        <img src="assets/images/home/MicrosoftTeams-image(7).webp"
+                                        <img src="https://ik.imagekit.io/ecomax/assets/images/home/MicrosoftTeams-image(7).webp"
                                             alt="images">
                                     </div>
                                     <div class="icon-text mt-0 ">
